Updated subPortal3 to fix within the spacing

--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@
      margin: 0;
      padding-top: 20px;
      position: relative;
-     right: -250px;
+     right: -300px;
  }
 
  .subPortal3{
